The img height was creating problem, issue fixed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
             <a href="#" class="explore-plus-logo">
                 <img src="./images/flipkart-explore-plus.jpeg" alt="">
             </a>
-            <input type="text" class="search-product" placeholder="Search for products, brands and more">
+            <div class="search-product">
+                <input type="text"  placeholder="Search for products, brands and more">
+            </div>
+            
         </div>
 
         
