--- a/index.html
+++ b/index.html
@@ -123,23 +123,28 @@
                                 <img src="./images/carosel-item-3.png" class="d-block w-100" alt="...">
                               </div>
                             </div>
-                            <button class="carousel-control-prev my-carosel-btn" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                              <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next my-carosel-btn" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                              <span class="visually-hidden">Next</span>
-                            </button>
-                          </div>
+                            <div class="my-carousel-btns-wrapper">
+                                <div class="my-carousel-btn" >
+                                    <button class="carousel-control-prev my-carosel-btn-prv" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                                        <span class="carousel-control-prev-icon " aria-hidden="true"></span>
+                                        <span class="visually-hidden">Previous</span>
+                                    </button>
+                                </div>
+                                <div class="my-carousel-btn">
+                                    <button class="carousel-control-next my-carosel-btn-nxt " type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">Next</span>
+                                      </button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-
                 </div>
             </div>
-
         </div>
-
     </section>
+
+
 
 
 
