Carousel button issue fixed using FA. span removed

--- a/index.html
+++ b/index.html
@@ -125,14 +125,16 @@
                             </div>
                             <div class="my-carousel-btns-wrapper">
                                 <div class="my-carousel-btn" >
-                                    <button class="carousel-control-prev my-carosel-btn-prv" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                                        <span class="carousel-control-prev-icon " aria-hidden="true"></span>
+                                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                                        <!-- <span class="carousel-control-prev-icon" aria-hidden="false"></span> -->
+                                        <i class="fa-solid fa-angle-left"></i>
                                         <span class="visually-hidden">Previous</span>
                                     </button>
                                 </div>
                                 <div class="my-carousel-btn">
                                     <button class="carousel-control-next my-carosel-btn-nxt " type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                        <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
+                                        <i class="fa-solid fa-angle-right"></i>
                                         <span class="visually-hidden">Next</span>
                                       </button>
                                 </div>
@@ -143,6 +145,8 @@
             </div>
         </div>
     </section>
+
+
 
 
 
