deals section image completed

--- a/index.html
+++ b/index.html
@@ -141,6 +141,29 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="main-body-bk-dics-img-item">
+                        <div class="discount-img-wrapper">
+                            <div class="discount-img-item">
+                                <img src="./images/bank-discount-img.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="main-body-deals-img-item">
+                        <div class="deals-images-wrapper">
+                            <div class="deals-img">
+                                <img src="./images/Nothing-phone-offer.png" alt="">
+                            </div>
+                            <div class="deals-img">
+                                <img src="./images/laptop-deals.png" alt="">
+                            </div>
+                            <div class="deals-img">
+                                <img src="./images/smart-tv-deals.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
